# AWS-CPP-SDK_starter

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
